# Axum-Crud

./: Cargo.toml
migrations/: 20241229195928_create_mouse_table.down.sql  20241229195928_create_mouse_table.up.sql  20241230180748_create_mouse_table.up.sql
src/: error.rs  handlers.rs  main.rs  models.rs  mouse.rs
