[package]
name = "SimpleAxumCrud"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio ={ version = "1.42.0", features = ["full"] }
axum-macros = "0.5.0"
axum = "0.8.0-rc.1"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = " 0.8.0", features = ["runtime-tokio-rustls", "postgres"] }
dotenv = "0.15.0"
